Fix MyModal's z-index to prevent overlapping

--- a/src/components/UI/MyModal/MyModal.module.css
+++ b/src/components/UI/MyModal/MyModal.module.css
@@ -36,4 +36,5 @@
 .myModal.active {
     opacity: 1;
     pointer-events: all;
+    z-index: 10;
 }
